--- a/index.html
+++ b/index.html
@@ -1003,7 +1003,11 @@
 		<div class="container">
 			<div class="inner">
 				<div class="left">
-					<p>Designed with love &copy; <a href="https://themeforest.net/user/marketify" target="_blank">Marketify</a></p>
+					<p>Copyright @ 2021. All rights reserved. <br>
+                        Designed by <a href="https://themeforest.net/user/marketify" target="_blank">Marketify</a>
+                    <br>
+                    Developed by
+                    <a href="https://www.facebook.com/mekhala.mariam/">Mekhala Mariam</a></p>
 				</div>
 				<div class="right">
 					<ul>
