--- a/index.html
+++ b/index.html
@@ -1003,7 +1003,7 @@
 		<div class="container">
 			<div class="inner">
 				<div class="left">
-					<p>Copyright @ 2021. All rights reserved. <br>
+					<p>Copyright © 2021. All rights reserved. <br>
                         Designed by <a href="https://themeforest.net/user/marketify" target="_blank">Marketify</a>
                     <br>
                     Developed by
